ref(external-services): fix show in home for coinbase/shapeshift

--- a/src/pages/integrations/shapeshift/shapeshift-settings/shapeshift-settings.scss
+++ b/src/pages/integrations/shapeshift/shapeshift-settings/shapeshift-settings.scss
@@ -19,8 +19,11 @@ page-shapeshift-settings {
   }
   ion-spinner {
     position: fixed;
-    top: 50%;
+    top: 40%;
     left: 50%;
     margin-left: -1em;
+    * {
+      stroke: #0d172c !important;
+    }
   }
 }
